# TypeChef

./: .gitignore  .travis.yml  BUGS  LICENSE  OOMExceptionDuringTesting.txt  Parameter.txt  README  README.md  Stats.scala  VariationalProgramming.md  analyze.sh  apacheTestCase.sh  bb.dimacs  boaTestCase.sh  build.sbt  busyboxTestCase_david.sh  busyboxfinal.dbginterface  completedConf.h  cygwin.properties  darwin-gentoo-pref.properties  darwin.properties  deployJar.sh  genpages.sh  gnuplotTestCase.sh  gtk.properties  ideas.html  index.html  jcpp.conf  jcpp.sh  lighttpdTestCase.sh  linux-darwin.properties  linux-redhat.properties  linuxAnalyzeISize.sh  linuxFileList.inc  linuxKernelSrcList.txt  linuxPCPPStats.sh  linuxParseTypecheck.sh  linuxParsingStats.sh  linuxTestCase.sh  linux_2.6.33.3_pcs.txt  (+23 more)
BoaCaseStudy/: .classpath  .project
BoaCaseStudy/project/: build.properties
CParser/: .classpath  .gitignore  .project  build.sbt
CParser/project/: build.properties
CRefactor/: build.sbt  knownBugs
CRefactor/src/: log4j2.xml
CRewrite/: build.sbt
CTypeChecker/: .classpath  .project  build.sbt
CTypeChecker/project/: build.properties
ErrorLib/: README.md
FeatureExprLib/: .classpath  .gitignore  .project  README.md  build.sbt
FeatureExprLib/.manager/: _$_Users_$_ckaestne_$_Documents_$_uni_$_typechef_$_FeatureExprLib_$_src_$_de_$_fosd_$_typechef_$_featureexpr_$_FeatureExpr.scala  _$_Users_$_ckaestne_$_Documents_$_uni_$_typechef_$_FeatureExprLib_$_src_$_de_$_fosd_$_typechef_$_featureexpr_$_FeatureProvider.scala  _$_Users_$_ckaestne_$_Documents_$_uni_$_typechef_$_FeatureExprLib_$_src_$_de_$_fosd_$_typechef_$_featureexpr_$_MacroContext.scala  _$_Users_$_ckaestne_$_Documents_$_uni_$_typechef_$_FeatureExprLib_$_src_$_de_$_fosd_$_typechef_$_featureexpr_$_MacroStorage.scala  _$_Users_$_ckaestne_$_Documents_$_uni_$_typechef_$_FeatureExprLib_$_src_$_de_$_fosd_$_typechef_$_featureexpr_$_MacroStore.scala  _$_Users_$_ckaestne_$_Documents_$_uni_$_typechef_$_FeatureExprLib_$_src_$_de_$_fosd_$_typechef_$_featureexpr_$_SatSolver.scala  _$_Users_$_ckaestne_$_Documents_$_uni_$_typechef_$_FeatureExprLib_$_src_$_de_$_fosd_$_typechef_$_featureexpr_$_Solver.scala  _$_Users_$_ckaestne_$_Documents_$_uni_$_typechef_$_FeatureExprLib_$_src_$_de_$_fosd_$_typechef_$_featureexpr_$_TestFeatureExpr.scala  (+1 more)
FeatureExprLib/lib/: .gitignore
FeatureExprLib/project/: build.properties
Frontend/: build.sbt
GnuCParser/: .classpath  .project  antlr-2.7.7.msi
GnuCParser/cgram/: todo.txt  (+3 more)
JavaParser/: .classpath  .project
JavaScriptParser/: .cache  .classpath  .project
LinuxAnalysis/: README  readme.txt
ParserExperiment/: .classpath  .project
ParserFramework/: .classpath  .project
PartialPreprocessor/: .classpath  .project  README.md  build.sbt  jcpp (fork.c).launch  jcpp (shell).launch  jcpp (vim-buffer.c).launch
Sampling/: build.sbt
_includes/: README.md
boa/: .project  CREDITS  ChangeLog  boa.conf
boa/src/: .depend  .gitignore  Makefile  Makefile.in  acconfig.h  aclocal.m4  alias.c  alias.pi  alias.pi.ast  boa.c  boa.h  boa.pi  boa.pi.ast  boa_grammar.y  boa_lexer.l  buffer.c  buffer.i  buffer.pi  buffer.pi.ast  cgi.c  cgi.pi  cgi.pi.ast  cgi_header.c  cgi_header.pi  cgi_header.pi.ast  check_struct_for.m4  compat.h  config.c  config.cache  config.h  config.h.in  config.pi  config.pi.ast  config.status  configure  configure.in  cygwin.h  defines.h  escape.c  escape.h  (+52 more)
busybox/: busybox_files  busybox_pcs.txt  config.h  featureModel
haskell/: CondParser.hs  README  README.md
host/: disable-blocks.h  platform-cygwin.h  platform-darwin-GentooP-wrapper.h  platform-darwin-GentooP.h  platform-darwin-gentoo-prefix-wrapper.h  platform-darwin-kernel-gnu89-O2-wrapper.h  platform-darwin-kernel-gnu89-O2.h  platform-darwin-wrapper.h  platform-darwin.h  platform-redhat-gnu89-O2-32bit.h  platform-redhat-gnu89-O2.h  platform-redhat.h  platform-ubuntu9_10.h  platform.h
jcpp/: .classpath  .gitignore  .project  .project~  jcpp (fork.c).launch  jcpp (shell).launch  jcpp.log.1  jcpp.log.2  macroDebug.txt  tokenstream.txt
linux-2.6.33.3-patches/: fix-kernel-src  fix-trace  fix-trace-v2  linux-use-compiler-h  make-compile  remove-dead-buggy-code  series  workaround-preprocessor-bug
org.sat4j.core/: .classpath  .pmd  LICENSE.txt  pom.xml
project/: Build.scala  TypeChef.scala  build.properties  idea.properties  plugins.sbt
(+3121 files in other folders)
